Only add a new VolumeObject if there's no other one with the same mounting point

Can happen with encrypted partition setups
BUG:440477